Fix: small z-index issue

--- a/style/sass/module/streetwalk.scss
+++ b/style/sass/module/streetwalk.scss
@@ -293,6 +293,7 @@
     left:0;
     width:100%;
     height:100%;
+    z-index:25;
 }
 
 .streetwalk-textcharacter {
